--- a/css/dev-home.css
+++ b/css/dev-home.css
@@ -7,11 +7,16 @@
   padding: 0 !important;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(0,0,0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
-.kerala-dev-logo img{
-    width: 2rem;
-    height: 2rem;
+.kerala-dev-logo img {
+  width: 2rem;
+  height: 2rem;
 }
-.custom-title{
-    font-size: 1.2rem;
-    font-weight: 500;
+.custom-title {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.card {
+  border-width: 0.05rem;
+  border-style: solid; 
+  border-color: #00000054; 
 }
