Implement sidebar navigation and modified various styles

--- a/css/dev-home.css
+++ b/css/dev-home.css
@@ -15,8 +15,6 @@
   font-size: 1.2rem;
   font-weight: 500;
 }
-.card {
-  border-width: 0.05rem;
-  border-style: solid; 
-  border-color: #00000054; 
+.shadow {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
 }
